SERVER-107784 Abandon the snapshot when yielding acquisitions resources from the opCtx (#39046)

GitOrigin-RevId: c39b57edd5af9bdf56003f2bc91c2b4354fe46d3